--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Super-linter
         uses: super-linter/super-linter@v6.4.0
         env:
+          VALIDATE_JSCPD: false
+          VALIDATE_CSS: false
+          VALIDATE_HTML: false
           VALIDATE_SHELL_SHFMT: false
           VALIDATE_BASH_EXEC: false
           VALIDATE_GO: false
