--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -6,10 +6,32 @@ on:
 permissions: { }
 
 jobs:
+  test:
+    name: Running test.
+    runs-on: ubuntu-latest
+    container: golang:1.22.2
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Unit Tests
+        run: GOOS=linux GOARCH=amd64 go test -v ./... -count=1
+  
+  build: 
+    name: Checking on build.
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: '^1.22.2'
+
+      - name: Build
+        run: go build -v ./...
+
   lint:
     name: Checking with Lint.
     runs-on: ubuntu-latest
-    
+       
     permissions:
       contents: read
       packages: read
@@ -22,7 +44,7 @@ jobs:
           fetch-depth: 0
     
       - name: Super-linter
-        uses: super-linter/super-linter@v6.4.0
+        uses: super-linter/super-linter@v6.4.1
         env:
           VALIDATE_JSCPD: false
           VALIDATE_CSS: false
