--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -33,7 +33,7 @@ jobs:
         with:
           fetch-depth: 0
     
-      - name: Super-linter
+      - name: Super-Linter
         uses: super-linter/super-linter@v6.4.1
         env:
           VALIDATE_JSCPD: false
