--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ TODO_DBFILE=internal/storage_db/scheduler.db
 TODO_DBFILE_TEST=../storage_db/scheduler.db
 TODO_PORT=7540
 TODO_PASSWORD=12345
+TODO_HASH_FOR_TEST=\$2a\$10$lpZ0w2e2w/dO39NH93SdJujraj2sAlFE5QngzeyXtAzzc.zL8yPd2
