--- a/.golangci.yml
+++ b/.golangci.yml
@@ -16,7 +16,7 @@ linters-settings:
     check-blank: true
   govet:
     # report about shadowed variables
-    check-shadowing: true
+    linters.govet.check-shadowing: true
   gocyclo:
     # minimal code complexity to report, 30 by default
     min-complexity: 20
