--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -24,6 +24,7 @@ jobs:
       - name: Super-Linter
         uses: super-linter/super-linter/slim@v6.5.0
         env:
+          VALIDATE_SQLFLUFF: false
           VALIDATE_JSCPD: false
           VALIDATE_CSS: false
           VALIDATE_HTML: false
