--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,7 +1,9 @@
 ---
-name: sprint12_cicd_pipelinee
+name: Deploy App
+
 on:
   push:
+
 
 permissions: { }
 
@@ -24,7 +26,6 @@ jobs:
       - name: Super-Linter
         uses: super-linter/super-linter/slim@v6.5.0
         env:
-          VALIDATE_SQLFLUFF: false
           VALIDATE_JSCPD: false
           VALIDATE_CSS: false
           VALIDATE_HTML: false
@@ -32,3 +33,44 @@ jobs:
           VALIDATE_BASH_EXEC: false
           VALIDATE_GO: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  test:
+    name: Running test.
+    runs-on: ubuntu-latest
+    needs: [ lint ]
+    container: golang:1.22.2
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Run Unit Tests
+        run: GOOS=linux GOARCH=amd64 go test -v ./... -count=1
+  deploy:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [lint, test ]
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.5.1
+        with:
+          images: ra1nz0r/sprint12_cicd_pipeline
+
+      - name: Build and push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags:   ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta. outputs.labels }}
