--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -25,7 +25,10 @@ jobs:
     
       - name: Super-Linter
         uses: super-linter/super-linter/slim@v6.5.0
+        with:
+          args: --timeout=10m --verbose
         env:
+          VALIDATE_SQLFLUFF: false
           VALIDATE_JSCPD: false
           VALIDATE_CSS: false
           VALIDATE_HTML: false
