--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -2,8 +2,11 @@
 name: Deploy App
 
 on:
-  push:
-
+  workflow_dispatch:
+    inputs:
+      tag:
+        description: 'Tag to deploy'
+        required: true
 
 permissions: { }
 
@@ -21,7 +24,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.inputs.tag }}
           fetch-depth: 0
+
+      - name: Check if tag exists
+        run: |
+          git fetch --all --tags
+          if ! git tag | grep -q "^${{ github.event.inputs.tag }}$"; then
+            echo "error: Tag '${{ github.event.inputs.tag }}' not found"
+            exit 1
+          fi    
     
       - name: Super-Linter
         uses: super-linter/super-linter/slim@v6.5.0
@@ -36,20 +48,11 @@ jobs:
           VALIDATE_BASH_EXEC: false
           VALIDATE_GO: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  test:
-    name: Running test.
-    runs-on: ubuntu-latest
-    needs: [ lint ]
-    container: golang:1.22.3
-    steps:
-      - uses: actions/checkout@v4
 
-      - name: Run Unit Tests
-        run: GOOS=linux GOARCH=amd64 go test -v ./... -count=1
   deploy:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
-    needs: [lint, test ]
+    needs: [lint]
     if: startsWith(github.ref, 'refs/tags')
     steps:
       - name: Checkout
