--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,12 +1,8 @@
 ---
-name: Deploy App
+name: Linting.
 
 on:
-  workflow_dispatch:
-    inputs:
-      tag:
-        description: 'Tag to deploy'
-        required: true
+  push:
 
 permissions: { }
 
@@ -24,16 +20,7 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
         with:
-          ref: ${{ github.event.inputs.tag }}
           fetch-depth: 0
-
-      - name: Check if tag exists
-        run: |
-          git fetch --all --tags
-          if ! git tag | grep -q "^${{ github.event.inputs.tag }}$"; then
-            echo "error: Tag '${{ github.event.inputs.tag }}' not found"
-            exit 1
-          fi    
     
       - name: Super-Linter
         uses: super-linter/super-linter/slim@v6.5.0
@@ -48,35 +35,3 @@ jobs:
           VALIDATE_BASH_EXEC: false
           VALIDATE_GO: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-  deploy:
-    name: Push Docker image to Docker Hub
-    runs-on: ubuntu-latest
-    needs: [lint]
-    if: startsWith(github.ref, 'refs/tags')
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Set up Docker buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-          
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5.5.1
-        with:
-          images: ra1nz0r/sprint12_cicd_pipeline
-
-      - name: Build and push Docker Image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags:   ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta. outputs.labels }}
