--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 # Альтернативный путь для хранения базы данных. При отсутствии этой переменной берётся по-умолчанию,
 # указанный в папке 'config/server_conf.go', 'DbDefaultPath = "internal/storage_db/scheduler.db"'
 TODO_DBFILE=internal/storage_db/scheduler.db
-# Путь для тестов, назначается отдельно от основного для программы.
+# Путь для тестов, назначается отдельно от основного для программы, должен совпадать с основным, 
+# но иметь свой выход на расположение базы данных.
 TODO_DBFILE_TEST=../storage_db/scheduler.db
 # Альтернативный порт для запуска сервера. При отсутствии этой переменной берётся по-умолчанию,
 # указанный в папке 'config/server_conf.go', 'DefaultPort = "7540"'.
