--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,8 +1,9 @@
 ---
-name: Linting.
+name: Linting and pushing on DockerHub by tag.
 
 on:
-  pull_request:
+  push:
+    tags: ['v[0-9].[0-9]+.[0-9]+']
 
 permissions: { }
 
@@ -35,3 +36,34 @@ jobs:
           VALIDATE_BASH_EXEC: false
           VALIDATE_GO: false
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  docker_hub:
+    name: Push Docker image to Docker Hub
+    runs-on: ubuntu-latest
+    needs: [ lint ]
+    if: startsWith(github.ref, 'refs/tags')
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Docker buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+          
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5.5.1
+        with:
+          images: ra1nz0r/sprint12_cicd_pipeline
+
+      - name: Build and push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags:   ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta. outputs.labels }}
