--- a/internal/database/models/sqlc.yml
+++ b/internal/database/models/sqlc.yml
@@ -8,6 +8,6 @@ sql:
     gen:
       go:
         package: "database"
-        out: "../database"
+        out: "../../database"
         emit_json_tags: true
         emit_exact_table_names: true
